feat: ブログスタイルを改善し、共通スタイルをインポート。新しい色変数を追加し、目次やコンテンツのスタイルを調整。Heroku登録ページに新しいコンテンツを追加し、全体のレイアウトを整える。

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,8 +14,11 @@
     --section-bg: #f8f9fa;
     --border-color: #dfe6e9;
     --header-height: 100vh;
+    --blog-background-color: #d9d9d9;
 
     /* ブランドカラー */
+    --brand-primary: #cca7ea;
+    --brand-secondary: #a085c7;
     --github-color: #333333;
     --twitter-color: #333333;
     --mail-color: #333333;
